kube/deployment_sidecar_stdout_new.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplelog
  labels:
    purpose: sample
spec:
  selector:
    matchLabels:
      app: samplelog
  replicas: 1
  template:
    metadata:
      labels:
        app: samplelog
    spec:
      serviceAccountName: logsample
      securityContext:
      # runAsUser: 1000
      # runAsGroup: 2000
      # fsGroup: 2000
      #securityContext:
       seLinuxOptions:
        type: logsample-seprofile_logsample.process
      containers:
        - name: samplelog
          ######previously working image########
          #image: quay.io/rh_ee_raravi/logsample
          image: quay.io/rh_ee_raravi/logsample1
          imagePullPolicy: "Always"
          securityContext:
           runAsUser: 65000
           runAsGroup: 65000
           # fsGroup: 2000
           #seLinuxOptions:
           # type: logsample-seprofile_logsample.process
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: applog
            mountPath: /var/app/
        - name: fluentd
          securityContext:
                  #seLinuxOptions:
                  #type: logsample-seprofile_logsample.process
                #capabilities:
                #add: ["MKNOD", "DAC_READ_SEARCH", "DAC_OVERRIDE", "FOWNER"]
                runAsUser: 65000
                runAsGroup: 65000
                #fsGroup: 2000
          image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
          volumeMounts:
            - name: fluentd-config
              mountPath: /fluentd/etc/fluent.conf
              subPath: fluent.conf
            - name: applog
              mountPath: /var/app/
      volumes:
        - name: applog
          #emptyDir: {}
          hostPath:
            path: /var/app
            type: Directory
        - name: fluentd-config
          configMap:
            name: fluentd-config  
---
apiVersion: v1
kind: Service
metadata:
  name: samplelog
  labels:
    app: samplelog
spec:
  ports:
   - port: 80
     name: http
     targetPort: 8080
  selector:
   app: samplelog
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: samplelog
  namespace: logsample
  labels:
    app: samplelog
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: samplelog
    weight: 100
  port:
    targetPort: http
    wildcardPolicy: None
